--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Imobiliaria
 excludes=
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\dyesi\\Desktop\\mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\icaro\\Downloads\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
